--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="SpUsage">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/baseWhite"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/buttonBackArrow"
+                style="@style/BackArrowPrimary" />
+
+            <TextView
+                android:id="@+id/title"
+                style="@style/Text.Black"
+                android:layout_gravity="center"
+                android:text="Mening ma’lumotlarim"
+                android:textSize="18sp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileImg"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/marginBase"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/user_img" />
+
+        <TextView
+            android:id="@+id/name"
+            style="@style/Text.Black.Bold"
+            android:layout_gravity="center_horizontal"
+            android:text="Ikromov Mirzokhidjon"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/uploadCvBtn"
+            style="@style/BaseButton.Blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:drawableStart="@drawable/ic_upload"
+            android:drawablePadding="12dp"
+            android:paddingLeft="33dp"
+            android:paddingRight="33dp"
+            android:text="Rezyumeni Yuklash" />
+
+        <Button
+            android:id="@+id/createCvBtn"
+            style="@style/BaseButton.Blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="1dp"
+            android:drawableStart="@drawable/ic_plus"
+            android:drawablePadding="12dp"
+            android:paddingLeft="63dp"
+            android:paddingRight="63dp"
+            android:text="Rezyume yaratish" />
+
+
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="@dimen/marginVeryHigh"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/text_input_layout_bg"
+            android:drawableLeft="@drawable/ic_person"
+            android:drawablePadding="8dp"
+            android:focusable="false"
+            android:hint="Ikromov Oybek"
+            android:paddingStart="20dp" />
+
+        <EditText
+            android:id="@+id/mailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="@dimen/marginBase"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/text_input_layout_bg"
+            android:drawableLeft="@drawable/ic_mail"
+            android:drawablePadding="8dp"
+            android:focusable="false"
+            android:hint="sample@gmail.com"
+            android:paddingStart="20dp" />
+
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="@dimen/marginBase"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/text_input_layout_bg"
+            android:drawableLeft="@drawable/ic_lock"
+            android:drawablePadding="8dp"
+            android:focusable="false"
+            android:hint="*******"
+            android:inputType="textPassword"
+            android:paddingStart="20dp" />
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/saveBtn"
+        style="@style/BaseButton.Blue"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="@dimen/marginVeryHigh"
+        android:enabled="false"
+        android:text="Saqlash" />
+
+</FrameLayout>
