--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -126,7 +126,7 @@
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="@dimen/marginVeryHigh"
-        android:enabled="false"
+        android:enabled="true"
         android:text="Saqlash" />
 
 </FrameLayout>
