--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -30,6 +30,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/categoryCount"
+            android:maxLength="20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
