--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,19 +6,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/myResume"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_person"
             android:title="Mening rezyumelarim" />
         <item
             android:id="@+id/userPolicy"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_baseline_local_police_24"
             android:title="Foydalanish shartlari" />
         <item
             android:id="@+id/about"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_baseline_info_24"
             android:title="Ilova haqida" />
         <item
             android:id="@+id/exit"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_baseline_exit_to_app_24"
             android:title="Chiqish" />
     </group>
 </menu>
